--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta keywords="Victor, Chambi Gonzales, Ingenieria WEB, UNC, Sistemas">
     <meta name="author" content="Chambi Gonzales">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="" type="text/css">
+    <link rel="stylesheet" href="css/esstilos.css" type="text/css">
     <link rel="shortcut icon" href="logo.png" type="favicon">
 
 
